fix alignment issue

--- a/src/app/shared/components/recipe-table/recipe-table.css
+++ b/src/app/shared/components/recipe-table/recipe-table.css
@@ -10,6 +10,17 @@ thead th {
     border-bottom: 2px solid #D7AF59;
 }
 
+table th.sortable:nth-child(4),
+table th.sortable:nth-child(5) {
+  text-align: center;
+}
+
+table td:nth-child(4),
+table td:nth-child(5) {
+  text-align: center;
+  vertical-align: middle;
+}
+
 .sortable span {
     display: inline-flex;
     align-items: center;
